[project]
name = "allegro"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "torch>=2.2",
    "pyyaml>=6.0",
    "wandb>=0.16",
    "datasets>=2.20",
    "nltk>=3.9",
    "tqdm>=4.66",
    "vllm>=0.6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/allegro"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
